components/kind-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  
    cert-manager.io/issuer: "ca-issuer"  
spec:
  tls:
    - hosts:
      - example.com
      secretName: ca-key-pair
  rules:
  - host: example.com
    http:
      paths:
      - path: /foo
        pathType: Exact
        backend:
          service:
            name: foo-service
            port: 
              number: 5678
      - path: /bar
        pathType: Exact
        backend:
          service:
            name: bar-service
            port: 
              number: 5678
